--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,5 @@
-== ENLACE README
+== README
+ENLACE
 
 This README would normally document whatever steps are necessary to get the
 application up and running.
