--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,4 @@
+{<img src="https://codeclimate.com/github/andela-bmakinwa/enlace/badges/gpa.svg" />}[https://codeclimate.com/github/andela-bmakinwa/enlace] {<img src="https://codeclimate.com/github/andela-bmakinwa/enlace/badges/coverage.svg" />}[https://codeclimate.com/github/andela-bmakinwa/enlace/coverage] {<img src="https://codeclimate.com/github/andela-bmakinwa/enlace/badges/issue_count.svg" />}[https://codeclimate.com/github/andela-bmakinwa/enlace]
 == README
 ENLACE
 
